# SecurityFlaws

Epilog/: .gitignore  CMakeLists.txt
Epilog/asm/Linux GCC 5.2.0/: func-alloca-omitfp-opt-stackp.s  func-alloca-omitfp-opt.s  func-alloca-omitfp-stackp.s  func-alloca-omitfp.s  func-alloca-opt-stackp.s  func-alloca-opt.s  func-alloca-stackp.s  func-alloca.s  func-fparam-omitfp-opt-stackp.s  func-fparam-omitfp-opt.s  func-fparam-omitfp-stackp.s  func-fparam-omitfp.s  func-fparam-opt-stackp.s  func-fparam-opt.s  func-fparam-stackp.s  func-fparam.s  func-iparam-fastcall-omitfp-opt-stackp.s  func-iparam-fastcall-omitfp-opt.s  func-iparam-fastcall-omitfp-stackp.s  func-iparam-fastcall-omitfp.s  func-iparam-fastcall-opt-stackp.s  func-iparam-fastcall-opt.s  func-iparam-fastcall-stackp.s  func-iparam-fastcall.s  func-iparam-omitfp-opt-stackp.s  func-iparam-omitfp-opt.s  func-iparam-omitfp-stackp.s  func-iparam-omitfp.s  func-iparam-opt-stackp.s  func-iparam-opt.s  func-iparam-stackp.s  func-iparam-stdcall-omitfp-opt-stackp.s  func-iparam-stdcall-omitfp-opt.s  func-iparam-stdcall-omitfp-stackp.s  func-iparam-stdcall-omitfp.s  func-iparam-stdcall-opt-stackp.s  func-iparam-stdcall-opt.s  func-iparam-stdcall-stackp.s  func-iparam-stdcall.s  func-iparam.s  (+88 more)
Epilog/asm/Linux clang 3.7.1/: func-alloca-omitfp-opt-stackp.s  func-alloca-omitfp-opt.s  func-alloca-omitfp-stackp.s  func-alloca-omitfp.s  func-alloca-opt-stackp.s  func-alloca-opt.s  func-alloca-stackp.s  func-alloca.s  func-fparam-omitfp-opt-stackp.s  func-fparam-omitfp-opt.s  func-fparam-omitfp-stackp.s  func-fparam-omitfp.s  func-fparam-opt-stackp.s  func-fparam-opt.s  func-fparam-stackp.s  func-fparam.s  func-iparam-fastcall-omitfp-opt-stackp.s  func-iparam-fastcall-omitfp-opt.s  func-iparam-fastcall-omitfp-stackp.s  func-iparam-fastcall-omitfp.s  func-iparam-fastcall-opt-stackp.s  func-iparam-fastcall-opt.s  func-iparam-fastcall-stackp.s  func-iparam-fastcall.s  func-iparam-omitfp-opt-stackp.s  func-iparam-omitfp-opt.s  func-iparam-omitfp-stackp.s  func-iparam-omitfp.s  func-iparam-opt-stackp.s  func-iparam-opt.s  func-iparam-stackp.s  func-iparam-stdcall-omitfp-opt-stackp.s  func-iparam-stdcall-omitfp-opt.s  func-iparam-stdcall-omitfp-stackp.s  func-iparam-stdcall-omitfp.s  func-iparam-stdcall-opt-stackp.s  func-iparam-stdcall-opt.s  func-iparam-stdcall-stackp.s  func-iparam-stdcall.s  func-iparam.s  (+72 more)
Epilog/asm/MSVC2010/: func-alloca-omitfp-opt-stackp.asm  func-alloca-omitfp-opt.asm  func-alloca-omitfp-stackp.asm  func-alloca-omitfp.asm  func-alloca-opt-stackp.asm  func-alloca-opt.asm  func-alloca-stackp.asm  func-alloca.asm  func-fparam-omitfp-opt-stackp.asm  func-fparam-omitfp-opt.asm  func-fparam-omitfp-stackp.asm  func-fparam-omitfp.asm  func-fparam-opt-stackp.asm  func-fparam-opt.asm  func-fparam-stackp.asm  func-fparam.asm  func-iparam-fastcall-omitfp-opt-stackp.asm  func-iparam-fastcall-omitfp-opt.asm  func-iparam-fastcall-omitfp-stackp.asm  func-iparam-fastcall-omitfp.asm  func-iparam-fastcall-opt-stackp.asm  func-iparam-fastcall-opt.asm  func-iparam-fastcall-stackp.asm  func-iparam-fastcall.asm  func-iparam-omitfp-opt-stackp.asm  func-iparam-omitfp-opt.asm  func-iparam-omitfp-stackp.asm  func-iparam-omitfp.asm  func-iparam-opt-stackp.asm  func-iparam-opt.asm  func-iparam-stackp.asm  func-iparam-stdcall-omitfp-opt-stackp.asm  func-iparam-stdcall-omitfp-opt.asm  func-iparam-stdcall-omitfp-stackp.asm  func-iparam-stdcall-omitfp.asm  func-iparam-stdcall-opt-stackp.asm  func-iparam-stdcall-opt.asm  func-iparam-stdcall-stackp.asm  func-iparam-stdcall.asm  func-iparam.asm  (+48 more)
Epilog/asm/MSVC2015/: func-alloca-omitfp-opt-stackp.asm  func-alloca-omitfp-opt.asm  func-alloca-omitfp-stackp.asm  func-alloca-omitfp.asm  func-alloca-opt-stackp.asm  func-alloca-opt.asm  func-alloca-stackp.asm  func-alloca.asm  func-fparam-omitfp-opt-stackp.asm  func-fparam-omitfp-opt.asm  func-fparam-omitfp-stackp.asm  func-fparam-omitfp.asm  func-fparam-opt-stackp.asm  func-fparam-opt.asm  func-fparam-stackp.asm  func-fparam.asm  func-iparam-fastcall-omitfp-opt-stackp.asm  func-iparam-fastcall-omitfp-opt.asm  func-iparam-fastcall-omitfp-stackp.asm  func-iparam-fastcall-omitfp.asm  func-iparam-fastcall-opt-stackp.asm  func-iparam-fastcall-opt.asm  func-iparam-fastcall-stackp.asm  func-iparam-fastcall.asm  func-iparam-omitfp-opt-stackp.asm  (+63 more)
Epilog/asm/MSVC2015-64/: func-alloca-omitfp-opt-stackp.asm  func-alloca-omitfp-opt.asm  func-alloca-omitfp-stackp.asm  func-alloca-omitfp.asm  func-alloca-opt-stackp.asm  func-alloca-opt.asm  func-alloca-stackp.asm  func-alloca.asm  func-fparam-omitfp-opt-stackp.asm  func-fparam-omitfp-opt.asm  func-fparam-omitfp-stackp.asm  func-fparam-omitfp.asm  func-fparam-opt-stackp.asm  func-fparam-opt.asm  func-fparam-stackp.asm  func-fparam.asm  func-iparam-fastcall-omitfp-opt-stackp.asm  func-iparam-fastcall-omitfp-opt.asm  func-iparam-fastcall-omitfp-stackp.asm  func-iparam-fastcall-omitfp.asm  func-iparam-fastcall-opt-stackp.asm  func-iparam-fastcall-opt.asm  func-iparam-fastcall-stackp.asm  func-iparam-fastcall.asm  func-iparam-omitfp-opt-stackp.asm  func-iparam-omitfp-opt.asm  func-iparam-omitfp-stackp.asm  func-iparam-omitfp.asm  func-iparam-opt-stackp.asm  func-iparam-opt.asm  func-iparam-stackp.asm  func-iparam-stdcall-omitfp-opt-stackp.asm  func-iparam-stdcall-omitfp-opt.asm  func-iparam-stdcall-omitfp-stackp.asm  func-iparam-stdcall-omitfp.asm  func-iparam-stdcall-opt-stackp.asm  func-iparam-stdcall-opt.asm  func-iparam-stdcall-stackp.asm  func-iparam-stdcall.asm  func-iparam.asm  (+48 more)
Epilog/src/: func-alloca.c  func-fparam.c  func-iparam-fastcall.c  func-iparam-stdcall.c  func-iparam.c  func-rets.c  func-va.c  func-vla.c  func-vla2.c  func.c  main-vla.c  main.c  struct-align-vla.c  struct-align-vla2.c  struct.c
Samples/: .gitignore  CMakeLists.txt
Samples/Sample01/: CMakeLists.txt  main.c
Samples/src/: func-alloca.c  func-fparam.c  func-iparam-fastcall.c  func-iparam-stdcall.c  func-iparam.c  func-rets.c  func-va.c  func-vla.c  func.c  struct-align.c  struct.c
Switch/: CMakeLists.txt
Switch/src/: linear.c
(+120 files in other folders)
